# restack_weaviate_curriculum

./: .env.Example  README.md  pyproject.toml  schedule_workflow.py
src/: services.py
src/functions/: function.py  gemini_function_call.py  weaviate_functions.py
src/workflows/: workflow.py
